deploy/production/service.yml
# deploy/production/service.yml
apiVersion: v1
kind: Service
metadata:
  name: erp-backend-service
spec:
  selector:
    app: erp
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
